= 2.0.0.80 =
* Unable to save empty value for date field - FIXED
* Porto theme compatibility - FIXED

= 2.0.0.79 =
* OceanWP theme & Elementor plugin compatibility - FIXED
* Ninja Forms still have not fixed their bug, we have added a more permanent fix until they fix it - FIXED
* Recipe schema option added - ADDED

= 2.0.0.77 =
* Avada v6.2 theme compatibility - FIXED

= 2.0.0.76 =
* Location page og:url for rank math - FIXED
* File field shows required field error twice - FIXED
* GD Listings widgets should show pending listings on author page - CHANGED
* Ninja Forms recent update breaks maps & API requests - FIXED

= 2.0.0.75 =
* Longitude validation fails to validate longitude with minus sign - FIXED
* Static map loads Google Map API even OSM API is enabled - FIXED
* Show formatted post date & post modified date in a badge - ADDED
* Twenty Twenty theme show 404 when no results found on search page - FIXED
* Post preview is not working for listing with status pending - FIXED
* Ninja Forms deprecated version with GeoDirectory shows blank page on site - FIXED
* Dynamic Content widget added for output of dynamic html or shortcodes - ADDED
* OceanWP theme shows incorrect titles on GD archive pages - FIXED
* Sometimes pagination & feed not working on category pages - FIXED
* Search with apostrophe on mac iOS device shows empty results - FIXED
* Search page meta title shows duplicate "Near" string - FIXED
* archive map show all posts param not working- FIXED
* Fix class name typo for geodir-dashboard class - FIXED

= 2.0.0.74 =
* Ninja Forms bug can cause PHP warnings on search page - TEMP FIX ADDED
* Map marker popup is not working for non-logged users with WP 5.3.1 - FIXED

= 2.0.0.72 =
* REST API rating stars & images upload not working - ADDED
* Elementor archive title element not rendering correct title on GD pages - FIXED
* Not able to setup GD search page with recent Divi page builder - FIXED
* JS variable conflict with Rank Math plugin - FIXED